--- a/public/playgame/index.html
+++ b/public/playgame/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | MuaGameBai</title>
+  <title>Kvip.com</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
